[package]
name = "progress-encode"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust implementation of the Progress ENCODE function"
documentation = "https://docs.rs/progress-encode"
homepage = "https://github.com/bladepoint6969/progress-encode"
authors = ["Bennett Buckley <ben.buckley@outlook.com>"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
