[package]
authors = ["Bennett Buckley <ben.buckley@outlook.com>"]
categories = ["algorithms"]
description = "A Rust implementation of the Progress ENCODE function"
documentation = "https://docs.rs/progress-encode"
edition = "2021"
homepage = "https://github.com/bladepoint6969/progress-encode"
license = "MIT OR Apache-2.0"
name = "progress-encode"
repository = "https://github.com/bladepoint6969/progress-encode"
rust-version = "1.56.1"
version = "0.1.1"
exclude = ["/.github", "/.vscode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.102"
